@@ -289,7 +289,7 @@ public class ObjectsHashCodePrimitiveTest {
             "Test.java", //
             "import java.util.Objects;",
             "class Test {",
-            "  Integer x = new Integer(3);",
+            "  Integer x = Integer.valueOf(3);",
             "  void f() {",
             "    int y = Objects.hashCode(x);",
             "  }",
@@ -305,7 +305,7 @@ public class ObjectsHashCodePrimitiveTest {
             "Test.java", //
             "import java.util.Objects;",
             "class Test {",
-            "  Integer x = new Integer(3);",
+            "  Integer x = Integer.valueOf(3);",
             "  void f() {",
             "    int y = x.hashCode();",
             "  }",
